add ci and update build deploy

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "frontmatter",
         "iframe",
         "merriweather",
+        "peaceiris",
         "predeploy",
         "prismjs"
     ]
